# gamejammeson

./: .gitignore  CMakeLists.txt  README.md  meson.build
configured_files/: config.hpp.in
src/: main.cpp  meson.build  mygame-config.hpp.meson
subprojects/: ftxui.wrap
test/: meson.build
