test('common', executable('commontests',
                          'catch_main.cpp',
                          'tests.cpp',
                          dependencies: [catch2_dep]))

test('constexpr', executable('constexprtests',
                             'catch_main.cpp',
                             'constexpr_tests.cpp',
                             dependencies: [catch2_dep]))
